# RoyalGameOfUrReloaded

./: .gitignore  CMakeLists.txt  brain.txt  videoScript.md
include/: board.h  playGame.h  player.h
src/: board.cpp  main.cpp  playGame.cpp  player.cpp
